chat area updated

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@fontsource/dm-sans": "^5.0.12",
     "@fontsource/open-sans": "^5.0.12",
+    "@fontsource/poppins": "^5.0.8",
     "@mui/icons-material": "^5.14.8"
   }
 }
